backup/centos_iptables_setting
[root@colud ~]# cat /etc/sysconfig/iptables
# Generated by iptables-save v1.4.7 on Tue Oct 14 13:11:41 2014
*nat
:PREROUTING ACCEPT [9028:1171328]
:POSTROUTING ACCEPT [38:2210]
:OUTPUT ACCEPT [38:2210]
-A POSTROUTING -s 192.168.240.0/24 -o seth0 -j MASQUERADE 
-A POSTROUTING -s 192.168.0.0/24 -o seth0 -j MASQUERADE 
COMMIT
# Completed on Tue Oct 14 13:11:41 2014
# Generated by iptables-save v1.4.7 on Tue Oct 14 13:11:41 2014
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [3927:3486851]
:OUTPUT ACCEPT [2539:3525249]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 1723 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 12888 -j ACCEPT 
-A INPUT -j REJECT --reject-with icmp-host-prohibited 
-A INPUT -p tcp -m tcp --dport 1723 -j ACCEPT 
-A INPUT -p gre -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 12888 -j ACCEPT 
COMMIT
# Completed on Tue Oct 14 13:11:41 2014
